@@ -119,9 +119,10 @@ input {
 }
 
 .stats {
-	margin-top: 6px;
+	margin-top: 15px;
 	padding-bottom: 6px;
 	border-bottom: dashed 1px #888;
+	border-top: dashed 1px #888;
 	width: 100%;
 }
 
@@ -162,11 +163,7 @@ input {
 }
 
 .search {
-	margin-top: 12px;
-	padding-top: 30px;
-	padding-bottom: 6px;
 	border-bottom: dashed 1px #888;
-	border-top: dashed 1px #888;
 	width: 100%;
 }
 
@@ -197,52 +194,6 @@ input {
 .left {
 	text-align: left;
 	padding-left: 10px;
-}
-
-/* Tooltip container */
-.tooltip {
-    position: relative;
-    display: inline-block;
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 0;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-
-    /* Fade in tooltip */
-    opacity: 0;
-	transition: opacity 0.3s;
-}
-
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
 }
 
 #addMonitor,
@@ -308,24 +259,6 @@ input {
 .monitor:hover,
 button:hover {
 	box-shadow: 5px 5px 20px #ccc;
-}
-
-/*easter egg */
-
-.monitor:active {
-	animation-name: spin;
-	animation-duration: 1000ms;
-	animation-iteration-count: 3;
-	animation-timing-function: ease-in-out;
-}
-
-@keyframes spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(180deg);
-	}
 }
 
 @media print {
