@@ -3,3 +3,4 @@ July 31, 2018
 	
 August 4, 2018
 	Transitioned from index.html to index.php - makes future development a whole lot easier as it writes each monitor within a for loop
+		-- now supports up to 9 monitors
